--- a/src/components/singIn/index.html
+++ b/src/components/singIn/index.html
@@ -12,14 +12,98 @@
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="revisit-after" content="15days" />
+    <script src="/src/components/singIn/index.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/src/js/script.js" defer></script>
-    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/components/singIn/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>Riwall</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/src/assets/img/logo.png" alt="logoNav" width="150px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Log In</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="/src/assets/img/iconoPerfil.png" alt="profileIcon" width="40px">
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="main">
+            <div class="logIn">
+                <div class="logo">
+                    <img src="/src/assets/img/logo.png" alt="logoLogin" width="350px">
+                </div>
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Keep session logged in</label>
+                    </div>
+                    <div class="button"><button type="submit" class="btn">Submit</button></div>
+                    <div id="emailHelp" class="form-text"><a href="">Did you forget your password?</a></div>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="footerContain">
+                <div class="logo"> <img src="/src/assets/img/logor.webp" alt="logoFoter" width="120px"></div>
+                <div class="logoText"><p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p></div>
+            </div>
+            <div class="footerContain footermargin textAlignC">
+                <div class="contact"><h3>Contact</h3></div>
+                <div class="textContact">
+                    <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
+                    <div><img src="/src/assets/img/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
+                    <div><img src="/src/assets/img/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
+                </div>
+            </div>
+            <div class="footerContain footermargin socialResponsive textAling">
+                <div class="socialMedia"><h3>Social Networks</h3></div>
+                <div class="logoSocial">
+                    <img src="/src/assets/img/iconfb.png" alt="iconfb" width="50px">
+                    <img src="/src/assets/img/iconinsta.png" alt="iconig" width="50px">
+                    <img src="/src/assets/img/iconin.png" alt="iconin"  width="50px">
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
