--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -12,14 +12,179 @@
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="revisit-after" content="15days" />
+    <script src="/src/components/wall/index.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/src/js/script.js" defer></script>
-    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/components/wall/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>Riwall</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/src/assets/img/logo.png" alt="logoNav" width="150px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Wall</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Lost Objects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Forum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Log In</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="/src/assets/img/iconoPerfil.png" alt="profileIcon" width="40px">
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="main">
+            <div class="mainContain button">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Add New Post
+                </button>
+            <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">New Post</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="input-group flex-nowrap">
+                                    <span class="input-group-text" id="addon-wrapping">Post Tittle</span>
+                                    <input type="text" class="form-control" placeholder="Post Tittle" aria-label="postTittle" aria-describedby="addon-wrapping">
+                                </div>
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+                                    <label for="floatingTextarea2">Post Description</label>
+                                  </div>
+                                  <div class="input-group mb-3">
+                                    <input type="file" class="form-control" id="inputGroupFile02">
+                                    <label class="input-group-text" for="inputGroupFile02">Upload Image</label>
+                                  </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn">Post</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mainContain mainContainCard">
+                <div class="cardPost">
+                    <div class="imageCard">
+                        <img class="imageCard" src="/src/assets/img/imgPost.webp" alt="imagePostCard" width="280px">
+                    </div>
+                    <div class="tittle">
+                        <h3>Article Title</h3>
+                    </div>
+                    <div class="descriptionCard">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
+                    </div>
+                    <div class="autor">
+                        <p>Posted by: Daniel Castaño</p>
+                    </div>
+                </div>
+                <div class="cardPost">
+                    <div class="imageCard">
+                        <img class="imageCard" src="/src/assets/img/imgPost2.jpg" alt="imagePostCard" width="280px">
+                    </div>
+                    <div class="tittle">
+                        <h3>Article Title</h3>
+                    </div>
+                    <div class="descriptionCard">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
+                    </div>
+                    <div class="autor">
+                        <p>Posted by: Daniel Castaño</p>
+                    </div>
+                </div>
+                <div class="cardPost">
+                    <div class="imageCard">
+                        <img class="imageCard" src="/src/assets/img/imgPost3.jpg" alt="imagePostCard" width="280px">
+                    </div>
+                    <div class="tittle">
+                        <h3>Article Title</h3>
+                    </div>
+                    <div class="descriptionCard">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
+                    </div>
+                    <div class="autor">
+                        <p>Posted by: Sebastian Vera</p>
+                    </div>
+                </div>
+                <div class="cardPost">
+                    <div class="imageCard">
+                        <img class="imageCard" src="/src/assets/img/imgPost4.jpg" alt="imagePostCard" width="280px">
+                    </div>
+                    <div class="tittle">
+                        <h3>Article Title</h3>
+                    </div>
+                    <div class="descriptionCard">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
+                    </div>
+                    <div class="autor">
+                        <p>Posted by: Sebastian Serna</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="footerContain">
+                <div class="logo"> <img src="/src/assets/img/logor.webp" alt="logoFoter" width="120px"></div>
+                <div class="logoText"><p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p></div>
+            </div>
+            <div class="footerContain footermargin textAlignC">
+                <div class="contact"><h3>Contact</h3></div>
+                <div class="textContact">
+                    <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
+                    <div><img src="/src/assets/img/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
+                    <div><img src="/src/assets/img/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
+                </div>
+            </div>
+            <div class="footerContain footermargin socialResponsive textAling">
+                <div class="socialMedia"><h3>Social Networks</h3></div>
+                <div class="logoSocial">
+                    <img src="/src/assets/img/iconfb.png" alt="iconfb" width="50px">
+                    <img src="/src/assets/img/iconinsta.png" alt="iconig" width="50px">
+                    <img src="/src/assets/img/iconin.png" alt="iconin"  width="50px">
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
