--- a/src/components/singIn/index.html
+++ b/src/components/singIn/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/src/assets/img/logo.png" alt="logoNav" width="150px">
+                    <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="/src/assets/img/iconoPerfil.png" alt="profileIcon" width="40px">
+                                <img src="/src/assets/images/iconoPerfil.png" alt="profileIcon" width="40px">
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -57,7 +57,7 @@
         <div class="main">
             <div class="logIn">
                 <div class="logo">
-                    <img src="/src/assets/img/logo.png" alt="logoLogin" width="350px">
+                    <img src="/src/assets/images/logo.png" alt="logoLogin" width="350px">
                 </div>
                 <form>
                     <div class="mb-3">
@@ -81,23 +81,23 @@
     <footer>
         <div class="footer">
             <div class="footerContain">
-                <div class="logo"> <img src="/src/assets/img/logor.webp" alt="logoFoter" width="120px"></div>
+                <div class="logo"> <img src="/src/assets/images/logor.webp" alt="logoFoter" width="120px"></div>
                 <div class="logoText"><p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p></div>
             </div>
             <div class="footerContain footermargin textAlignC">
                 <div class="contact"><h3>Contact</h3></div>
                 <div class="textContact">
                     <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
-                    <div><img src="/src/assets/img/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
-                    <div><img src="/src/assets/img/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
+                    <div><img src="/src/assets/images/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
+                    <div><img src="/src/assets/images/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
                 </div>
             </div>
             <div class="footerContain footermargin socialResponsive textAling">
                 <div class="socialMedia"><h3>Social Networks</h3></div>
                 <div class="logoSocial">
-                    <img src="/src/assets/img/iconfb.png" alt="iconfb" width="50px">
-                    <img src="/src/assets/img/iconinsta.png" alt="iconig" width="50px">
-                    <img src="/src/assets/img/iconin.png" alt="iconin"  width="50px">
+                    <img src="/src/assets/images/iconfb.png" alt="iconfb" width="50px">
+                    <img src="/src/assets/images/iconinsta.png" alt="iconig" width="50px">
+                    <img src="/src/assets/images/iconin.png" alt="iconin"  width="50px">
                 </div>
             </div>
         </div>
