--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/src/assets/img/logo.png" alt="logoNav" width="150px">
+                    <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="/src/assets/img/iconoPerfil.png" alt="profileIcon" width="40px">
+                                <img src="/src/assets/images/iconoPerfil.png" alt="profileIcon" width="40px">
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -102,7 +102,21 @@
             <div class="mainContain mainContainCard">
                 <div class="cardPost">
                     <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/img/imgPost.webp" alt="imagePostCard" width="280px">
+                        <img class="imageCard" src="/src/assets/images/imgPost.webp" alt="imagePostCard" width="280px">
+                    </div>
+                    <div class="tittle">
+                        <h3>Article Title</h3>
+                    </div>
+                    <div class="descriptionCard">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
+                    </div>
+                    <div class="autor">
+                        <p>Posted by: Santiago Londoño</p>
+                    </div>
+                </div>
+                <div class="cardPost">
+                    <div class="imageCard">
+                        <img class="imageCard" src="/src/assets/images/imgPost2.jpg" alt="imagePostCard" width="280px">
                     </div>
                     <div class="tittle">
                         <h3>Article Title</h3>
@@ -116,21 +130,7 @@
                 </div>
                 <div class="cardPost">
                     <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/img/imgPost2.jpg" alt="imagePostCard" width="280px">
-                    </div>
-                    <div class="tittle">
-                        <h3>Article Title</h3>
-                    </div>
-                    <div class="descriptionCard">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
-                    </div>
-                    <div class="autor">
-                        <p>Posted by: Daniel Castaño</p>
-                    </div>
-                </div>
-                <div class="cardPost">
-                    <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/img/imgPost3.jpg" alt="imagePostCard" width="280px">
+                        <img class="imageCard" src="/src/assets/images/imgPost3.jpg" alt="imagePostCard" width="280px">
                     </div>
                     <div class="tittle">
                         <h3>Article Title</h3>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="cardPost">
                     <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/img/imgPost4.jpg" alt="imagePostCard" width="280px">
+                        <img class="imageCard" src="/src/assets/images/imgPost4.jpg" alt="imagePostCard" width="280px">
                     </div>
                     <div class="tittle">
                         <h3>Article Title</h3>
@@ -162,23 +162,23 @@
     <footer>
         <div class="footer">
             <div class="footerContain">
-                <div class="logo"> <img src="/src/assets/img/logor.webp" alt="logoFoter" width="120px"></div>
+                <div class="logo"> <img src="/src/assets/images/logor.webp" alt="logoFoter" width="120px"></div>
                 <div class="logoText"><p>Hacer posible una plataforma digital en la que los coders sean protagonistas valiosos, haciendo de esta plataforma la herramienta para transformar la manera de comunicarnos.</p></div>
             </div>
             <div class="footerContain footermargin textAlignC">
                 <div class="contact"><h3>Contact</h3></div>
                 <div class="textContact">
                     <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
-                    <div><img src="/src/assets/img/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
-                    <div><img src="/src/assets/img/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
+                    <div><img src="/src/assets/images/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
+                    <div><img src="/src/assets/images/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
                 </div>
             </div>
             <div class="footerContain footermargin socialResponsive textAling">
                 <div class="socialMedia"><h3>Social Networks</h3></div>
                 <div class="logoSocial">
-                    <img src="/src/assets/img/iconfb.png" alt="iconfb" width="50px">
-                    <img src="/src/assets/img/iconinsta.png" alt="iconig" width="50px">
-                    <img src="/src/assets/img/iconin.png" alt="iconin"  width="50px">
+                    <img src="/src/assets/images/iconfb.png" alt="iconfb" width="50px">
+                    <img src="/src/assets/images/iconinsta.png" alt="iconig" width="50px">
+                    <img src="/src/assets/images/iconin.png" alt="iconin"  width="50px">
                 </div>
             </div>
         </div>
