--- a/style.css
+++ b/style.css
@@ -2,50 +2,36 @@
 @import url(./src/components/variables.css);
 
 *{
-    box-sizing: border-box;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h2,h3, p{
-    margin: 0;
+h1,h2{
+  font-family:  "Ubuntu", sans-serif;
+  color: #161E4C;
+  font-weight: 800;
+
 }
 /*----------------------------------------------NAV SESSION------------------------- */
-nav{
-   background-color: var(--secondary-color);
-   display: flex;
-   justify-content: center;
-   width: auto;
-}  
-   
-.container_nav{
-    flex: 1;
-    display: flex;
-    background-color: var(--secondary-color);
-    height: 70px;
-    max-width: 1440px;
-    justify-content: space-around;
-    align-items: center;
+.navbar {
+  font-family:  "Ubuntu", sans-serif;
+  font-weight: 800;
+  background-color: #D9D9D9;
+  --bs-navbar-padding-x: 108px;
+  --bs-navbar-padding-y: 0;
 }
 
-.link_menu{
-    margin: 10px;
-}
-.container_nav ul{
-    display: flex;
-    list-style: none;
-    align-items: center;
-    margin: 0;
-    padding: 0;
+.collapse{
+  justify-content: flex-end;
 }
 
-.container_nav a{
-    text-decoration: none;
-    color: var( --button-color);
-    font-size: 24px;
-    font-weight: bold;
-    padding: 0 19px;
+.navbar-nav{
+  align-items: center;
 }
 
+.nav-link{
+  color: #161E4C;
+}
 /*----------------------------------------------MAIN SESSION------------------------- */
 
 main{
@@ -196,52 +182,39 @@ main{
 
 
   /*------------------SECCION FOOTER------------------------------------*/
-  footer{
-    
-    height: 200px;
-    background-color: var(--secondary-color);
+  .footer{
     display: flex;
+    gap: 50px;
+    background-color: #D9D9D9;
+    padding: 10px 100px;
     justify-content: center;
-    
-  }
-
-  .container_footer{
-    display: flex;
-    max-width: 1140px;
     align-items: center;
-    justify-content: space-between;
-  }
-
-.container_footer h2{
-    font-size: 40px;
-    color: var(--footer-tittle);
-    font-weight: bold;
 }
-  .logo_footer{
-    width: 30%;
-    margin: 0;
-  }
-  .logo_footer p{
-    font-size: 12px;
-  }
 
-  .contact{
-    text-align: center;
-  }
-  .contact div{
+.footerContain{
     display: flex;
-    gap: 10px;
-    align-items: center;
-    
-  }
-  .contact div p{
-    margin: 0;
-    font-size: 12px;
-  }
+    flex-direction: column;
+    width: 33%;
+    text-align: center;
+}
 
+.footermargin{
+    margin-top: 70px;
+}
+.textAling{
+    text-align: center;
+}
 
-  .social_networks a{
-    display: inline-block;
-    margin: 8px;
+.textAlignC{
+text-align: center;
+}
 
-  }
+.logoText{
+    font-family:  "Ubuntu", sans-serif;
+    color: #161E4C;
+}
+
+.textContact{
+    font-family:  "Ubuntu", sans-serif;
+    color: #161E4C;
+}
