--- a/src/components/singIn/index.html
+++ b/src/components/singIn/index.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Log In</a>
@@ -43,9 +43,9 @@
                                 <img src="/src/assets/images/iconoPerfil.png" alt="profileIcon" width="40px">
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Inicio</a></li>
+                                <li><a class="dropdown-item" href="#">perfil</a></li>
+                                <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
                             </ul>
                         </li>
                     </ul>
