--- a/src/components/singIn/styles.css
+++ b/src/components/singIn/styles.css
@@ -124,17 +124,15 @@ form{
 
 .footer{
     display: flex;
-    gap: 50px;
     background-color: #D9D9D9;
-    padding: 10px 100px;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: stretch;
 }
 
 .footerContain{
     display: flex;
     flex-direction: column;
-    width: 33%;
+    width: 25%;
     text-align: center;
 }
 
@@ -143,6 +141,10 @@ form{
 }
 .textAling{
     text-align: center;
+}
+.textContact a{
+  text-decoration: none;
+  color: #161E4C;
 }
 
 .textAlignC{
