actualizacion del nav y footer

--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/index.html">
                     <img src="/src/assets/images/logo.png" alt="logoNav" width="150px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,28 +33,27 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Wall</a>
+                            <a class="nav-link" aria-current="page" href="/src/components/wall/index.html">Muro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Lost Objects</a>
+                            <a class="nav-link" aria-current="page" href="/src/components/objectLost/index.html">Objetos perdidos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Forum</a>
+                            <a class="nav-link" aria-current="page" href="#">Foro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log In</a>
+                            <a class="nav-link" href="/src/components/singIn/index.html">Log In</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img src="/src/assets/images/iconoPerfil.png" alt="profileIcon" width="40px">
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Perfil</a></li>
+                                <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -170,15 +169,15 @@
                 <div class="textContact">
                     <div>Cl. 16 #55-129, Guayabal, Medellín CC. De Moda Outlet, piso 3</div>
                     <div><img src="/src/assets/images/wppblack.png" alt="iconphone" width="30px">: Phone : +57 3017325327</div>
-                    <div><img src="/src/assets/images/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</div>
+                    <div><a href="mailto:info@riwi.io"><img src="/src/assets/images/mailblack.png" alt="iconmail" width="30px">: E-mail : info@riwi.io</a></div>
                 </div>
             </div>
             <div class="footerContain footermargin socialResponsive textAling">
                 <div class="socialMedia"><h3>Social Networks</h3></div>
                 <div class="logoSocial">
-                    <img src="/src/assets/images/iconfb.png" alt="iconfb" width="50px">
-                    <img src="/src/assets/images/iconinsta.png" alt="iconig" width="50px">
-                    <img src="/src/assets/images/iconin.png" alt="iconin"  width="50px">
+                    <a href="#"><img src="/src/assets/images/iconfb.png" alt="iconfb" width="50px"></a>
+                    <a href="#"><img src="/src/assets/images/iconinsta.png" alt="iconig" width="50px"></a>
+                    <a href="#"><img src="/src/assets/images/iconin.png" alt="iconin"  width="50px"></a>
                 </div>
             </div>
         </div>
