--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ h1,h2{
   font-weight: 800;
 
 }
+
+a{
+  text-decoration: none;
+}
 /*----------------------------------------------NAV SESSION------------------------- */
 .navbar {
   font-family:  "Ubuntu", sans-serif;
@@ -65,7 +69,6 @@ main{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    
 }
 
 .cardInfo_container, .cardWall_container, .cardObjects_container{
@@ -76,6 +79,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    box-shadow: 0px -1px 22px 5px rgba(0,0,0,0.75);
 }
 .cardWall_container{
     background-color: brown;
@@ -184,17 +188,15 @@ main{
   /*------------------SECCION FOOTER------------------------------------*/
   .footer{
     display: flex;
-    gap: 50px;
     background-color: #D9D9D9;
-    padding: 10px 100px;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: stretch;
 }
 
 .footerContain{
     display: flex;
     flex-direction: column;
-    width: 33%;
+    width: 25%;
     text-align: center;
 }
 
@@ -203,6 +205,10 @@ main{
 }
 .textAling{
     text-align: center;
+}
+.textContact a{
+  text-decoration: none;
+  color: #161E4C;
 }
 
 .textAlignC{
