Actualizacion wall y creacion wallAdmin

--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -85,11 +85,11 @@
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
                                     <label for="floatingTextarea2">Post Description</label>
-                                  </div>
-                                  <div class="input-group mb-3">
+                                </div>
+                                <div class="input-group mb-3">
                                     <input type="file" class="form-control" id="inputGroupFile02">
                                     <label class="input-group-text" for="inputGroupFile02">Upload Image</label>
-                                  </div>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
@@ -100,60 +100,72 @@
                 </div>
             </div>
             <div class="mainContain mainContainCard">
-                <div class="cardPost">
-                    <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/images/imgPost.webp" alt="imagePostCard" width="280px">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Posted by: Santiago Londoño
                     </div>
-                    <div class="tittle">
-                        <h3>Article Title</h3>
+                    <div class="card-body">
+                        <div class="card-bodyLeft">
+                            <img class="imgPost" src="/src/assets/images/imgPost.webp" alt="imgpost" width="100%">
+                        </div>
+                        <div class="card-bodyRight">
+                            <h3 class="card-title">Title Post</h3>
+                            <p class="card-text">With supporting text below as a natural lead-in Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim numquam error quasi temporibus corporis quaerat, earum dolores deserunt maiores asperiores explicabo eum id recusandae excepturi. Atque numquam omnis adipisci accusantium? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus atque expedita sint reprehenderit nemo blanditiis aperiam, illum, consequuntur adipisci rem doloremque dolorem! Sed iusto ea mollitia a delectus libero? Tempore? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam modi placeat laborum impedit sed, numquam itaque doloremque? Quis eveniet consectetur quo eius amet. Accusamus quam explicabo numquam quia, eum suscipit. to additional content.</p>
+                        </div>
                     </div>
-                    <div class="descriptionCard">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
-                    </div>
-                    <div class="autor">
-                        <p>Posted by: Santiago Londoño</p>
-                    </div>
-                </div>
-                <div class="cardPost">
-                    <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/images/imgPost2.jpg" alt="imagePostCard" width="280px">
-                    </div>
-                    <div class="tittle">
-                        <h3>Article Title</h3>
-                    </div>
-                    <div class="descriptionCard">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
-                    </div>
-                    <div class="autor">
-                        <p>Posted by: Daniel Castaño</p>
+                    <div class="card-footer text-body-secondary">
+                        22/05/2024
                     </div>
                 </div>
-                <div class="cardPost">
-                    <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/images/imgPost3.jpg" alt="imagePostCard" width="280px">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Posted by: Sebastian Serna
                     </div>
-                    <div class="tittle">
-                        <h3>Article Title</h3>
+                    <div class="card-body">
+                        <div class="card-bodyLeft">
+                            <img class="imgPost" src="/src/assets/images/imgPost2.jpg" alt="imgpost" width="100%">
+                        </div>
+                        <div class="card-bodyRight">
+                            <h3 class="card-title">Title Post</h3>
+                            <p class="card-text">With supporting text below as a natural lead-in Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim numquam error quasi temporibus corporis quaerat, earum dolores deserunt maiores asperiores explicabo eum id recusandae excepturi. Atque numquam omnis adipisci accusantium? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus atque expedita sint reprehenderit nemo blanditiis aperiam, illum, consequuntur adipisci rem doloremque dolorem! Sed iusto ea mollitia a delectus libero? Tempore? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam modi placeat laborum impedit sed, numquam itaque doloremque? Quis eveniet consectetur quo eius amet. Accusamus quam explicabo numquam quia, eum suscipit. to additional content.</p>
+                        </div>
                     </div>
-                    <div class="descriptionCard">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
-                    </div>
-                    <div class="autor">
-                        <p>Posted by: Sebastian Vera</p>
+                    <div class="card-footer text-body-secondary">
+                        20/05/2024
                     </div>
                 </div>
-                <div class="cardPost">
-                    <div class="imageCard">
-                        <img class="imageCard" src="/src/assets/images/imgPost4.jpg" alt="imagePostCard" width="280px">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Posted by: Sebastian Vera
                     </div>
-                    <div class="tittle">
-                        <h3>Article Title</h3>
+                    <div class="card-body">
+                        <div class="card-bodyLeft">
+                            <img class="imgPost" src="/src/assets/images/imgPost3.jpg" alt="imgpost" width="100%">
+                        </div>
+                        <div class="card-bodyRight">
+                            <h3 class="card-title">Title Post</h3>
+                            <p class="card-text">With supporting text below as a natural lead-in Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim numquam error quasi temporibus corporis quaerat, earum dolores deserunt maiores asperiores explicabo eum id recusandae excepturi. Atque numquam omnis adipisci accusantium? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus atque expedita sint reprehenderit nemo blanditiis aperiam, illum, consequuntur adipisci rem doloremque dolorem! Sed iusto ea mollitia a delectus libero? Tempore? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam modi placeat laborum impedit sed, numquam itaque doloremque? Quis eveniet consectetur quo eius amet. Accusamus quam explicabo numquam quia, eum suscipit. to additional content.</p>
+                        </div>
                     </div>
-                    <div class="descriptionCard">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nam, ad voluptas facilis, praesentium quae, magni et reiciendis tenetur odit nesciunt. Provident, minima error aut blanditiis ad accusamus quaerat dolore.</p>
+                    <div class="card-footer text-body-secondary">
+                        18/05/2024
                     </div>
-                    <div class="autor">
-                        <p>Posted by: Sebastian Serna</p>
+                </div>
+                <div class="card text-center">
+                    <div class="card-header">
+                        Posted by: Daniel Castaño
+                    </div>
+                    <div class="card-body">
+                        <div class="card-bodyLeft">
+                            <img class="imgPost" src="/src/assets/images/imgPost4.jpg" alt="imgpost" width="100%">
+                        </div>
+                        <div class="card-bodyRight">
+                            <h3 class="card-title">Title Post</h3>
+                            <p class="card-text">With supporting text below as a natural lead-in Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim numquam error quasi temporibus corporis quaerat, earum dolores deserunt maiores asperiores explicabo eum id recusandae excepturi. Atque numquam omnis adipisci accusantium? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus atque expedita sint reprehenderit nemo blanditiis aperiam, illum, consequuntur adipisci rem doloremque dolorem! Sed iusto ea mollitia a delectus libero? Tempore? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam modi placeat laborum impedit sed, numquam itaque doloremque? Quis eveniet consectetur quo eius amet. Accusamus quam explicabo numquam quia, eum suscipit. to additional content.</p>
+                        </div>
+                    </div>
+                    <div class="card-footer text-body-secondary">
+                        15/05/2024
                     </div>
                 </div>
             </div>
