actualizacion wall, se agrega funcion al boton post para hacer una nueva publicacion

--- a/src/components/wall/styles.css
+++ b/src/components/wall/styles.css
@@ -131,7 +131,7 @@ text-align: center;
     gap: 10px;
 }
 
-textarea.form-control:focus{
+input.form-control:focus, textarea.form-control:focus{
     border-color: #A79FF1;
     box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px #161E4C;
     outline: 0 none;
