--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -12,8 +12,8 @@
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="revisit-after" content="15days" />
-    <script src="/src/components/wall/index.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="/src/components/wall/index.js" defer></script>
     <link rel="stylesheet" href="/src/components/wall/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,29 +77,31 @@
                                 <h1 class="modal-title fs-5" id="exampleModalLabel">New Post</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
+                            <form id="postForm">
                             <div class="modal-body">
                                 <div class="input-group flex-nowrap">
                                     <span class="input-group-text" id="addon-wrapping">Post Tittle</span>
-                                    <input type="text" class="form-control" placeholder="Post Tittle" aria-label="postTittle" aria-describedby="addon-wrapping">
+                                    <input id="postTittle" class="form-control" placeholder="Post Tittle" aria-label="postTittle" aria-describedby="addon-wrapping">
                                 </div>
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
                                     <label for="floatingTextarea2">Post Description</label>
                                 </div>
                                 <div class="input-group mb-3">
-                                    <input type="file" class="form-control" id="inputGroupFile02">
+                                    <input type="file"  accept="image/*" class="form-control" id="inputGroupFile02">
                                     <label class="input-group-text" for="inputGroupFile02">Upload Image</label>
                                 </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn">Post</button>
+                                <button id="postWall" type="button" class="btn">Post</button>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="mainContain mainContainCard">
+            <div id="post" class="mainContain mainContainCard">
                 <div class="card text-center">
                     <div class="card-header">
                         Posted by: Santiago Londoño
