--- a/src/components/wall/index.html
+++ b/src/components/wall/index.html
@@ -81,7 +81,7 @@
                             <div class="modal-body">
                                 <div class="input-group flex-nowrap">
                                     <span class="input-group-text" id="addon-wrapping">Post Tittle</span>
-                                    <input id="postTittle" class="form-control" placeholder="Post Tittle" aria-label="postTittle" aria-describedby="addon-wrapping">
+                                    <input id="postTittle" type="text" class="form-control" placeholder="Post Tittle" aria-label="postTittle" aria-describedby="addon-wrapping">
                                 </div>
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
