--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ main{
 .tittle_bar_link:hover{
   border-radius: 10px;
   color: #0026ff;
-
+  scale: 1.07;
 }
 
 .container_information, .container_wall, .container_objectsLost{
@@ -95,18 +95,25 @@ main{
     width: 100%;
     height: 300px;
     border-radius: 28px;
-    background-color: blueviolet;
     display: flex;
     gap: 20px;
     align-items: center;
     justify-content: space-evenly;
-    box-shadow: 0px -1px 22px 5px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     overflow: hidden;
     scroll-behavior: smooth;
     
 }
+.cardInfo_container{
+  background-color: transparent;
+  transition: 1s;
+}
+.cardInfo_container:hover{
+  background-color: #0026ff;
+  box-shadow: 0px -1px 32px 5px rgba(0,0,0,0.75);
+}
 .cardWall_container{
-    background-color: brown;
+    background-color: transparent;
 }
 .cardObjects_container{
     background-color: chocolate;
