actualizado objectos perdidos

--- a/src/components/objectLost/index.html
+++ b/src/components/objectLost/index.html
@@ -77,11 +77,11 @@
                     <input type="file" id="image-input" accept="image/*">
                 </div>
                       <div class="containerForm">
-                        <form id="nameForm">
-                          <label for="firstName">Encontrado por:</label>
-                          <input type="text" id="firstName" name="firstName" autocomplete="off" required>
-                          <label for="lastName">Reclamar en:</label>
-                          <input type="text" id="lastName" name="lastName" autocomplete="off" required>
+                        <form id="FormObjects">
+                          <label for="claim">Encontrado por:</label>
+                          <input type="text" id="claim" name="claim" autocomplete="off" required>
+                          <label for="found">Reclamar en:</label>
+                          <input type="text" id="found" name="found" autocomplete="off" required>
                           <button type="submit">Enviar formulario</button>
                         </form>
                     </div>
@@ -353,11 +353,10 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <div id="InfoObject"></div>
+                        <div id="InfoName"></div>
                         <h3>descripcion</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi numquam voluptas vel distinctio, consequuntur a quaerat deleniti sint in quia nostrum, non exercitationem, ad recusandae explicabo. Quibusdam totam magnam doloribus.</p>                     
-                        <div id="displayInfo"></div>
-                        
+                        <div id="InfoObject"></div>                                
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
