--- a/src/components/objectLost/style.css
+++ b/src/components/objectLost/style.css
@@ -21,6 +21,11 @@ h1,h2{
   --bs-navbar-padding-y: 0;
   margin-bottom: 4%;
 }
+header{
+  position: sticky;
+  top: 0;
+  box-shadow: 0 0 7px #000;
+}
 
 .collapse{
   justify-content: flex-end;
