--- a/src/components/wall/styles.css
+++ b/src/components/wall/styles.css
@@ -16,7 +16,14 @@ h1,h2,h3{
     --bs-navbar-padding-x: 10%;
     --bs-navbar-padding-y: 0;
   }
-  
+
+  header{
+    position: sticky;
+    top: 0;
+    box-shadow: 0 0 7px #000;
+    z-index: 100;
+  }
+
   .collapse{
     justify-content: flex-end;
   }
