inicio del json server

--- a/src/components/singup/index.html
+++ b/src/components/singup/index.html
@@ -72,7 +72,9 @@
                         <label for="exampleInputPassword1" class="form-label">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <div class="button"><button type="submit" class="btn" id="register">Registrarse</button></div>
+                    <div class="button">
+                        <button type="submit" class="btn" id="register">Registrarse</button>
+                    </div>
                     
                 </form>
             </div>
